specs/blueprints/errors/validation/missing_comment.eno
# Querying a section for a required but missing comment 

-- input
# section
-- input

-- javascript
parse(input).section('section').requiredStringComment();
-- javascript

-- php
Enolib\Parser::parse($input)->section('section')->requiredStringComment();
-- php

-- python
enolib.parse(input).section('section').required_string_comment()
-- python

-- ruby
Enolib.parse(input).section('section').required_string_comment
-- ruby

## ValidationError

-- text
A required comment for this element is missing.
-- text

-- snippet
   Line | Content
 >    1 | # section
-- snippet

selection: [0,0] => [0,0]
